--- a/services/analytics/.env.example
+++ b/services/analytics/.env.example
@@ -36,9 +36,22 @@ MATERIALIZED_VIEW_ENABLED=true
 
 # Alert Configuration
 ALERTS_ENABLED=true
-ALERT_EMAIL_ENABLED=false
-ALERT_SLACK_ENABLED=false
-ALERT_WEBHOOK_URL=
+ALERT_CHECK_INTERVAL=300
+ALERT_ERROR_RATE=0.05
+ALERT_LATENCY_P95=300
+ALERT_CONVERSION_RATE=0.1
+
+# Email Configuration for Alerts
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+EMAIL_FROM=alerts@teloo.com
+ALERT_EMAIL_TO=admin@teloo.com,ops@teloo.com
+
+# Slack Configuration for Alerts
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK
+SLACK_CHANNEL=#alerts
 
 # Dashboard Configuration
 DASHBOARD_MAX_RESULTS=1000
