--- a/services/analytics/requirements.txt
+++ b/services/analytics/requirements.txt
@@ -37,6 +37,12 @@ scipy==1.11.4
 # Caching
 aiocache==0.12.2
 
+# HTTP Client for notifications
+aiohttp==3.9.1
+
+# Email support
+aiosmtplib==3.0.1
+
 # Testing (development)
 pytest==7.4.3
 pytest-asyncio==0.21.1
