--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_DB: teloo_v3
       POSTGRES_USER: teloo_user
       POSTGRES_PASSWORD: teloo_password
+      TZ: America/Bogota
+      PGTZ: UTC
     ports:
       - "5432:5432"
     volumes:
@@ -25,6 +27,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: teloo-redis
+    environment:
+      TZ: America/Bogota
     ports:
       - "6379:6379"
     volumes:
