chore: Actualizar configuraciones y modelos para soporte de notificaciones
Modelos:
- Agregar campos cliente_acepto y respuesta_cliente_texto a Solicitud
- Actualizar modelo User para soporte de notificaciones

Servicios:
- Actualizar scheduler para job de notificación al cliente
- Mejorar solicitudes_service con nuevos campos
- Actualizar config de agent-ia para Telegram y audio

Configuración:
- Actualizar .env.example con variables de Telegram
- Actualizar docker-compose.yml con nuevos servicios
- Configurar Redis para contexto de conversaciones

--- a/services/agent-ia/.env.example
+++ b/services/agent-ia/.env.example
@@ -4,6 +4,11 @@
 CORE_API_URL=http://core-api:8000
 CORE_API_TIMEOUT=30
 
+# Service Authentication (para comunicación segura con Core API)
+# Generar con: python -c "import secrets; print(secrets.token_urlsafe(32))"
+SERVICE_NAME=agent-ia
+SERVICE_API_KEY=your-agent-ia-api-key-change-in-production
+
 # Redis Configuration
 REDIS_URL=redis://redis:6379
 REDIS_POOL_SIZE=10
@@ -15,9 +20,33 @@ WHATSAPP_VERIFY_TOKEN=your-whatsapp-verify-token
 WHATSAPP_WEBHOOK_SECRET=your-whatsapp-webhook-secret
 WHATSAPP_API_VERSION=v18.0
 
+# Telegram Configuration
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_ENABLED=true
+
+# ============================================
+# AUDIO PROCESSING CONFIGURATION
+# ============================================
+# Primary strategy for audio processing
+AUDIO_PRIMARY_STRATEGY=whisper  # whisper | anthropic | gemini
+
+# Fallback configuration
+AUDIO_FALLBACK_STRATEGY=openai  # openai | anthropic | gemini
+AUDIO_FALLBACK_ENABLED=true
+
+# Fallback triggers
+AUDIO_FALLBACK_CONFIDENCE_THRESHOLD=0.6  # 60% minimum confidence
+AUDIO_MIN_TRANSCRIPTION_LENGTH=10        # Minimum characters
+
+# Transcription cache
+AUDIO_TRANSCRIPTION_CACHE_ENABLED=true
+AUDIO_TRANSCRIPTION_CACHE_TTL=86400      # 24 hours
+
+# ============================================
 # LLM Providers Configuration
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-3.5-turbo
+# OpenAI - Recommended for production
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_MODEL=gpt-4o-mini  # Recommended: gpt-4o-mini ($0.15/1M tokens) | gpt-4o ($5/1M tokens)
 OPENAI_MAX_TOKENS=1000
 OPENAI_TEMPERATURE=0.3
 
