--- a/services/core-api/.env.example
+++ b/services/core-api/.env.example
@@ -47,3 +47,8 @@ TIMEZONE=America/Bogota
 # Logging
 LOG_LEVEL=INFO
 LOG_FORMAT=json
+
+# Service-to-Service Authentication
+# Generar con: python -c "import secrets; print(secrets.token_urlsafe(32))"
+AGENT_IA_API_KEY=your-agent-ia-api-key-change-in-production
+ANALYTICS_API_KEY=your-analytics-api-key-change-in-production
