--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,8 @@ services:
       context: ./services/core-api
       dockerfile: Dockerfile
     container_name: teloo-core-api
+    env_file:
+      - ./services/core-api/.env
     environment:
       - DATABASE_URL=postgres://teloo_user:teloo_password@postgres:5432/teloo_v3
       - REDIS_URL=redis://redis:6379
@@ -75,6 +77,8 @@ services:
       - MINIO_SECRET_KEY=teloo_minio_password
       - JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
       - ENVIRONMENT=development
+      - AGENT_IA_API_KEY=m4YQECAHqUZl_4O9p3ZG8YlYjvFF_IAbxiFu6l_6epk
+      - ANALYTICS_API_KEY=wHe7MRSvi1prmjG9H75CmiDxaRON7mDDbe9fKQ8bt0E
     ports:
       - "8000:8000"
     depends_on:
@@ -93,12 +97,11 @@ services:
       context: ./services/agent-ia
       dockerfile: Dockerfile
     container_name: teloo-agent-ia
+    env_file:
+      - ./services/agent-ia/.env
     environment:
       - CORE_API_URL=http://core-api:8000
       - REDIS_URL=redis://redis:6379
-      - WHATSAPP_WEBHOOK_TOKEN=your-whatsapp-webhook-token
-      - OPENAI_API_KEY=your-openai-api-key
-      - ANTHROPIC_API_KEY=your-anthropic-api-key
       - ENVIRONMENT=development
     ports:
       - "8001:8001"
