chore: Organizar proyecto - mover documentación histórica a /docs
- Agregar /archive al .gitignore (archivos temporales)
- Crear estructura /docs con documentación histórica organizada:
  - /docs/completed: Implementaciones completadas
  - /docs/fixes: Correcciones y fixes
  - /docs/implementations: Guías de implementación
  - /docs/summaries: Resúmenes de cambios
- Eliminar 80+ archivos de prueba/debug de la raíz del proyecto
- Mantener solo código fuente activo y documentación relevante

--- a/.gitignore
+++ b/.gitignore
@@ -232,8 +232,11 @@ files/
 # Local development
 .local/
 local/
-# 
-Logo configuration files (not used)
+
+# Archive folder (historical/temporary files)
+archive/
+
+# Logo configuration files (not used)
 LOGO_CONFIGURABLE_*.md
 CAMBIAR_LOGO_GUIA.md
 frontend/admin/public/Logo.png
