--- a/services/realtime-gateway/.env.example
+++ b/services/realtime-gateway/.env.example
@@ -1,52 +1,28 @@
 # Realtime Gateway Environment Variables
 
-# Redis Configuration
-REDIS_URL=redis://redis:6379
-REDIS_POOL_SIZE=10
+# Service Configuration
+ENVIRONMENT=development
+SERVICE_NAME=realtime-gateway
+PORT=8003
 
-# WebSocket Configuration
-WEBSOCKET_MAX_CONNECTIONS=1000
-WEBSOCKET_PING_INTERVAL=20
-WEBSOCKET_PING_TIMEOUT=10
-WEBSOCKET_CLOSE_TIMEOUT=10
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
 
 # JWT Configuration
-JWT_SECRET_KEY=your-super-secret-jwt-key-change-in-production
+JWT_SECRET_KEY=your-secret-key-here-change-in-production
 JWT_ALGORITHM=RS256
+JWT_PUBLIC_KEY_PATH=./keys/public.pem
 
-# Socket.IO Configuration
-SOCKETIO_CORS_ALLOWED_ORIGINS=["http://localhost:3000","http://localhost:3001"]
-SOCKETIO_LOGGER=false
-SOCKETIO_ENGINEIO_LOGGER=false
+# CORS Configuration
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000,http://127.0.0.1:3001
 
-# Redis Adapter Configuration
-REDIS_ADAPTER_ENABLED=true
-REDIS_ADAPTER_CHANNEL_PREFIX=teloo:socketio
+# WebSocket Configuration
+WS_PING_INTERVAL=25
+WS_PING_TIMEOUT=60
+WS_MAX_CONNECTIONS=1000
 
-# Event Channels
-REDIS_EVENTS_CHANNEL=teloo:events
-REDIS_NOTIFICATIONS_CHANNEL=teloo:notifications
-
-# Room Configuration
-ADMIN_ROOM=admin_room
-ADVISOR_ROOM=advisor_room
-CLIENT_ROOM=client_room
-
-# Notification Configuration
-PUSH_NOTIFICATION_ENABLED=true
-WHATSAPP_FALLBACK_ENABLED=true
-NOTIFICATION_QUEUE_SIZE=1000
-
-# Application Configuration
-ENVIRONMENT=development
-DEBUG=true
+# Logging
 LOG_LEVEL=INFO
-API_V1_STR=/v1
-
-# Rate Limiting
-RATE_LIMIT_PER_MINUTE=500
-CONNECTION_RATE_LIMIT=10
-
-# Performance Configuration
-MAX_MESSAGE_SIZE=1048576
-MESSAGE_QUEUE_SIZE=100
