--- a/services/realtime-gateway/requirements.txt
+++ b/services/realtime-gateway/requirements.txt
@@ -14,6 +14,7 @@ aioredis==2.0.1
 
 # Authentication
 python-jose[cryptography]==3.3.0
+PyJWT==2.8.0
 
 # Data Validation & Serialization
 pydantic==2.5.0
