feat: Implementar configuración completa de variables de entorno y secrets (Task 13.3)
- Crear archivos .env por ambiente (development/staging/production)
- Implementar sistema de Docker secrets para producción
- Agregar módulo secrets.py para lectura segura de credenciales
- Crear scripts de validación de variables de entorno
- Implementar scripts de generación de secrets (bash y PowerShell)
- Agregar documentación completa (3,000+ líneas):
  * ENVIRONMENT_VARIABLES_GUIDE.md - Guía completa
  * ENV_QUICK_REFERENCE.md - Referencia rápida
  * DEPLOYMENT_CHECKLIST.md - Checklist de despliegue
  * secrets/README.md - Guía de secrets
- Configurar docker-compose.secrets.yml para producción
- Actualizar .gitignore para prevenir leaks de secrets
- Actualizar docker-compose.prod.yml con soporte de secrets
- Documentar 100+ variables de entorno por servicio
- Implementar validación automática en startup

Archivos creados:
- .env.{development,staging,production}
- docker-compose.secrets.yml
- scripts/validate-env.py
- scripts/generate-secrets.{sh,ps1}
- scripts/validate-all-services.{sh,ps1}
- services/*/utils/secrets.py
- docs/ENVIRONMENT_VARIABLES_GUIDE.md
- docs/ENV_QUICK_REFERENCE.md
- docs/DEPLOYMENT_CHECKLIST.md
- secrets/README.md

Requirements: 11.2, 11.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 # Environment files
 .env
 .env.local
-.env.development
-.env.production
+.env.*.local
+
+# Docker secrets directory (CRITICAL - Never commit!)
+secrets/
+*.secret
+*.key.txt
+*_password.txt
+*_token.txt
+*_api_key.txt
 
 # Logs
 logs
