Fix: Mejoras en bot Telegram - validación teléfono y normalización ciudad

--- a/.env.development
+++ b/.env.development
@@ -49,7 +49,7 @@ WHATSAPP_WEBHOOK_SECRET=your-test-webhook-secret
 
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=your-telegram-test-bot-token
-TELEGRAM_ENABLED=false
+TELEGRAM_ENABLED=true
 
 # LLM API Configuration (Development - Use Test Keys)
 OPENAI_API_KEY=your-openai-test-api-key
