feat(admin-ui): aplicar branding Teloo en dashboard admin sin cambios funcionales
- Header sticky con gradiente, buscador y acciones
- Sidebar con iconos en contenedor pill y estado activo con sombra
- KPIs con icono encapsulado y sombras sutiles
- Login con branding visible
- Revertir ancho máximo en Layout para ocupar 100% del espacio
- Ajustar banner del Dashboard con gradiente consistente

chore(dev-docker): montar /app/node_modules para hot reload estable en admin-frontend

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -45,7 +45,16 @@ services:
   admin-frontend:
     environment:
       - VITE_DEBUG=true
+      - VITE_API_BASE_URL=http://localhost:8000
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./frontend/admin:/app
+      - /app/node_modules
 
   advisor-frontend:
     environment:
       - VITE_DEBUG=true
+      - VITE_API_BASE_URL=http://localhost:8000
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - ./frontend/advisor:/app
