--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -126,6 +126,11 @@ http {
 
         # Security headers
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header Referrer-Policy "no-referrer" always;
+        add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+        add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline'; connect-src https://api.teloo.com https://ws.teloo.com" always;
 
         # Admin frontend
         location /admin {
@@ -192,6 +197,10 @@ http {
 
         # Security headers
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header Referrer-Policy "no-referrer" always;
+        add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
 
         # CORS headers
         add_header Access-Control-Allow-Origin "https://teloo.com" always;
