--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -63,6 +63,8 @@ services:
 
   minio:
     image: minio/minio:latest
+    ports:
+      - "7007:9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
       MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
@@ -88,6 +90,8 @@ services:
   # Core Services
   core-api:
     image: ${REGISTRY}/${IMAGE_PREFIX}/core-api:${IMAGE_VERSION}
+    ports:
+      - "7002:8000"
     env_file:
       - .env.production
     environment:
@@ -133,6 +137,8 @@ services:
 
   agent-ia:
     image: ${REGISTRY}/${IMAGE_PREFIX}/agent-ia:${IMAGE_VERSION}
+    ports:
+      - "7003:8000"
     env_file:
       - .env.production
     environment:
@@ -169,6 +175,8 @@ services:
 
   analytics:
     image: ${REGISTRY}/${IMAGE_PREFIX}/analytics:${IMAGE_VERSION}
+    ports:
+      - "7004:8000"
     env_file:
       - .env.production
     environment:
@@ -196,6 +204,8 @@ services:
 
   realtime-gateway:
     image: ${REGISTRY}/${IMAGE_PREFIX}/realtime-gateway:${IMAGE_VERSION}
+    ports:
+      - "7005:8000"
     env_file:
       - .env.production
     environment:
@@ -220,6 +230,8 @@ services:
 
   files:
     image: ${REGISTRY}/${IMAGE_PREFIX}/files:${IMAGE_VERSION}
+    ports:
+      - "7006:8000"
     env_file:
       - .env.production
     environment:
@@ -244,6 +256,8 @@ services:
   # Frontend Services
   admin-frontend:
     image: ${REGISTRY}/${IMAGE_PREFIX}/admin-frontend:${IMAGE_VERSION}
+    ports:
+      - "7000:3000"
     environment:
       - VITE_API_URL=${VITE_API_URL}
       - VITE_REALTIME_URL=${VITE_REALTIME_URL}
@@ -261,6 +275,8 @@ services:
 
   advisor-frontend:
     image: ${REGISTRY}/${IMAGE_PREFIX}/advisor-frontend:${IMAGE_VERSION}
+    ports:
+      - "7001:3000"
     environment:
       - VITE_API_URL=${VITE_API_URL}
       - VITE_REALTIME_URL=${VITE_REALTIME_URL}
