--- a/frontend/advisor/package.json
+++ b/frontend/advisor/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --port 3001",
     "build": "tsc && vite build",
+    "build:prod": "vite build",
     "preview": "vite preview --port 3001",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
