fix: add memory limit for Vite builds in Docker
- Set NODE_OPTIONS max-old-space-size to 2GB
- Helps prevent OOM errors in constrained CI/CD environments
- Build tested successfully locally

--- a/frontend/admin/Dockerfile
+++ b/frontend/admin/Dockerfile
@@ -26,6 +26,8 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
 # Build the application for production (skip TypeScript check for faster builds)
+# Set NODE_OPTIONS to limit memory usage in constrained environments
+ENV NODE_OPTIONS="--max-old-space-size=2048"
 RUN npm run build:prod
 
 # Stage 3: Development
