--- a/docker-compose.prod-full.yml
+++ b/docker-compose.prod-full.yml
@@ -1,13 +1,12 @@
 version: '3.8'
 
-# Backend-only Docker Compose for Coolify
-# Excludes frontends to avoid build issues
+# Coolify Docker Compose configuration
+# Optimized for single-server deployment with Coolify
 
 services:
   # Database Services
   postgres:
     image: postgres:15-alpine
-    container_name: teloo-postgres
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-teloo_production}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -24,12 +23,9 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    ports:
-      - "7010:5432"
 
   redis:
     image: redis:7-alpine
-    container_name: teloo-redis
     command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
@@ -41,15 +37,11 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    ports:
-      - "7011:6379"
 
   minio:
     image: minio/minio:latest
-    container_name: teloo-minio
     ports:
-      - "7007:9000"
-      - "7008:9001"
+      - "7007:9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
@@ -70,7 +62,6 @@ services:
     build:
       context: ./services/core-api
       dockerfile: Dockerfile
-    container_name: teloo-core-api
     ports:
       - "7002:8000"
     environment:
@@ -103,7 +94,6 @@ services:
     build:
       context: ./services/agent-ia
       dockerfile: Dockerfile
-    container_name: teloo-agent-ia
     ports:
       - "7003:8000"
     environment:
@@ -123,7 +113,6 @@ services:
     build:
       context: ./services/analytics
       dockerfile: Dockerfile
-    container_name: teloo-analytics
     ports:
       - "7004:8000"
     environment:
@@ -143,7 +132,6 @@ services:
     build:
       context: ./services/realtime-gateway
       dockerfile: Dockerfile
-    container_name: teloo-realtime
     ports:
       - "7005:8000"
     environment:
@@ -162,7 +150,6 @@ services:
     build:
       context: ./services/files
       dockerfile: Dockerfile
-    container_name: teloo-files
     ports:
       - "7006:8000"
     environment:
@@ -178,6 +165,39 @@ services:
     depends_on:
       - minio
       - redis
+    restart: unless-stopped
+
+  # Frontend Services
+  admin-frontend:
+    build:
+      context: ./frontend/admin
+      dockerfile: Dockerfile
+      target: production
+    ports:
+      - "7000:3000"
+    environment:
+      - VITE_API_URL=${API_URL}
+      - VITE_ENVIRONMENT=production
+    networks:
+      - teloo-network
+    depends_on:
+      - core-api
+    restart: unless-stopped
+
+  advisor-frontend:
+    build:
+      context: ./frontend/advisor
+      dockerfile: Dockerfile
+      target: production
+    ports:
+      - "7001:3000"
+    environment:
+      - VITE_API_URL=${API_URL}
+      - VITE_ENVIRONMENT=production
+    networks:
+      - teloo-network
+    depends_on:
+      - core-api
     restart: unless-stopped
 
 volumes:
