fix: Actualizar variables MinIO y corregir municipio_id en init_data
- Actualizar docker-compose.prod.yml para usar MINIO_ROOT_USER/PASSWORD
- Corregir init_data.py para incluir municipio_id en clientes de prueba
- Actualizar .env.production con nuevas variables MinIO
- Agregar documentación de deployment en Coolify

--- a/.env.production
+++ b/.env.production
@@ -17,8 +17,10 @@ REDIS_PASSWORD=${REDIS_PASSWORD_PROD}  # REQUIRED: Set via Docker secrets
 REDIS_URL=redis://:${REDIS_PASSWORD_PROD}@redis:6379
 
 # MinIO Configuration
-MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY_PROD}  # REQUIRED: Set via Docker secrets
-MINIO_SECRET_KEY=${MINIO_SECRET_KEY_PROD}  # REQUIRED: Set via Docker secrets
+MINIO_ROOT_USER=${MINIO_ACCESS_KEY_PROD}  # REQUIRED: Set via Docker secrets
+MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY_PROD}  # REQUIRED: Set via Docker secrets
+MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY_PROD}  # Legacy - for backward compatibility
+MINIO_SECRET_KEY=${MINIO_SECRET_KEY_PROD}  # Legacy - for backward compatibility
 MINIO_ENDPOINT=minio:9000
 MINIO_BUCKET_NAME=teloo-files-production
 MINIO_SECURE=true
