feat: Add frontends to docker-compose for Coolify deployment
- Add admin-frontend service (port 7000)
- Add advisor-frontend service (port 7001)
- Configure build args for API URLs
- Add healthchecks for frontends
- Update documentation

--- a/.env.production
+++ b/.env.production
@@ -87,8 +87,8 @@ IMAGE_VERSION=v1.0.0
 # ============================================
 # FRONTEND CONFIGURATION
 # ============================================
-VITE_API_URL=https://api.teloo.com
-VITE_REALTIME_URL=https://realtime.teloo.com
+VITE_API_URL=http://localhost:7002
+VITE_REALTIME_URL=http://localhost:7005
 VITE_ENVIRONMENT=production
 NODE_ENV=production
 
