fix: add minimal .dockerignore for frontend/admin to ensure all source files are copied

--- a/.gitignore
+++ b/.gitignore
@@ -185,8 +185,8 @@ cython_debug/
 ehthumbs.db
 Thumbs.db
 
-# Docker
-.dockerignore
+# Docker (only root .dockerignore, allow in subdirectories)
+/.dockerignore
 
 # Temporary files
 tmp/
