--- a/frontend/admin/Dockerfile
+++ b/frontend/admin/Dockerfile
@@ -94,8 +94,8 @@ USER nextjs
 
 EXPOSE 3000
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:3000 || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+    CMD curl -f http://127.0.0.1:3000 || exit 1
 
 # Production command (serve built files)
 CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0"]
