--- a/frontend/admin/Dockerfile
+++ b/frontend/admin/Dockerfile
@@ -100,4 +100,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl --fail http://localhost:3000 || exit 1
 
 # Production command (serve built files)
-CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0"]
+CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "3000"]
