--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -1,71 +1,11 @@
 version: '3.8'
 
-# Full Stack Docker Compose for Coolify
-# Includes backends and frontends
+# All Backend Services (Simplified for Coolify)
+# Use this if you want to deploy all services together
+# Note: This may fail on low-resource servers
 
 services:
-  # Database Services
-  postgres:
-    image: postgres:15-alpine
-    container_name: teloo-postgres
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB:-teloo_production}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      TZ: America/Bogota
-      PGTZ: UTC
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - teloo-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    ports:
-      - "7010:5432"
-
-  redis:
-    image: redis:7-alpine
-    container_name: teloo-redis
-    command: redis-server --appendonly yes
-    volumes:
-      - redis_data:/data
-    networks:
-      - teloo-network
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    ports:
-      - "7011:6379"
-
-  minio:
-    image: minio/minio:latest
-    container_name: teloo-minio
-    ports:
-      - "7007:9000"
-      - "7008:9001"
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-    volumes:
-      - minio_data:/data
-    networks:
-      - teloo-network
-    command: server /data --console-address ":9001"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # Core Services
+  # Core API
   core-api:
     build:
       context: ./services/core-api
@@ -77,20 +17,16 @@ services:
       - SERVICE_NAME=core-api
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
-      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ENDPOINT=${MINIO_ENDPOINT:-minio:9000}
       - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - JWT_ALGORITHM=${JWT_ALGORITHM}
+      - JWT_ALGORITHM=${JWT_ALGORITHM:-HS256}
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - CORS_ORIGINS=${CORS_ORIGINS}
     networks:
       - teloo-network
-    depends_on:
-      - postgres
-      - redis
-      - minio
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -99,6 +35,7 @@ services:
       retries: 3
       start_period: 40s
 
+  # Agent IA
   agent-ia:
     build:
       context: ./services/agent-ia
@@ -108,19 +45,17 @@ services:
       - "7003:8000"
     environment:
       - SERVICE_NAME=agent-ia
-      - CORE_API_URL=http://core-api:8000
+      - CORE_API_URL=${CORE_API_URL:-http://core-api:8000}
       - REDIS_URL=${REDIS_URL}
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     networks:
       - teloo-network
-    depends_on:
-      core-api:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
     restart: unless-stopped
+    depends_on:
+      - core-api
 
+  # Analytics
   analytics:
     build:
       context: ./services/analytics
@@ -136,15 +71,9 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     networks:
       - teloo-network
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      core-api:
-        condition: service_healthy
     restart: unless-stopped
 
+  # Realtime Gateway
   realtime-gateway:
     build:
       context: ./services/realtime-gateway
@@ -160,13 +89,9 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     networks:
       - teloo-network
-    depends_on:
-      redis:
-        condition: service_healthy
-      core-api:
-        condition: service_healthy
     restart: unless-stopped
 
+  # Files Service
   files:
     build:
       context: ./services/files
@@ -176,7 +101,7 @@ services:
       - "7006:8000"
     environment:
       - SERVICE_NAME=files
-      - MINIO_ENDPOINT=minio:9000
+      - MINIO_ENDPOINT=${MINIO_ENDPOINT:-minio:9000}
       - MINIO_ACCESS_KEY=${MINIO_ROOT_USER}
       - MINIO_SECRET_KEY=${MINIO_ROOT_PASSWORD}
       - REDIS_URL=${REDIS_URL}
@@ -184,20 +109,8 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
     networks:
       - teloo-network
-    depends_on:
-      minio:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      core-api:
-        condition: service_healthy
     restart: unless-stopped
-
-volumes:
-  postgres_data:
-  redis_data:
-  minio_data:
 
 networks:
   teloo-network:
-    driver: bridge
+    external: true
